--- a/traces.css
+++ b/traces.css
@@ -79,7 +79,7 @@ h1.Big {
 
 /* needs to leave room at the top for shortcut panel */
 h1 {
-  color: #FF0000;
+  color: #003600;
   font-size: 35px;
   background: transparent;
   font-weight: bold;
