--- a/traces.css
+++ b/traces.css
@@ -113,7 +113,7 @@ h3 {
 
 
 h4 {
-  color : #3161fc;
+  color : #668855;
   font-size: 21px;
   margin-left: 10%;
   margin-right: 7%;
@@ -122,7 +122,7 @@ h4 {
 
 
 h5 {
-  color : #1c3071;
+  color : #FF0000;
   font-size: 16px;
   margin-left: 15%;
   margin-right: 15%;
