--- a/doc/traces.css
+++ b/doc/traces.css
@@ -9,28 +9,33 @@
 /* Updated: Michal Guerquin (michalg@gmail.com) */
 
 
+/* For blocks of code (introduced with '.. code::'): */
 pre.code {
 	margin-left: 3%;
-	background: #ccddcc;
+	background: #ddeedd;
 	text-indent: 0%;
 }
 
 
+/* For inline (in-text) literals (i.e. surrounded with '``'): */
 .literal {
-	color: #155704;
-	font-weight: bold;
+	font-family: monospace, serif;
+	background:  #ddeedd;
+	white-space: pre-wrap;
+	font-size: 90%;
 }
 
 
-/* For command printouts: */
+/* For command printouts (introduced with '::' then a block): */
 .literal-block {
-	background: #acc8a5;
+	background: #ddeedd;
 	margin-left: 2%;
 }
 
 
+/* Unused: */
 div.box {
-	color: #FF0000;
+	/*color: #555555;*/
 	background: #FFFFFF;
 	border: solid;
 	padding: 5px;
@@ -372,6 +377,7 @@ th {
 }
 
 
+/* Notably for footnotes: */
 td {
 	background: #d0e6ca;
 	font-size: 14px;
